fixes pages and links page spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -320,11 +320,6 @@ a {
     overflow: hidden;
 }
 
-.page {
-    padding-block: var(--article-spacing);
-}
-
-
 .post__summary {
     margin-block: 1em;
 }
